search, utils: Unaccent and normalize strings when searching

This will ensure that searching for "podminky" will match with with
"podmínky" and vice versa.

This requires the new tracker:unaccent function in Tracker 0.17.1.

https://bugzilla.gnome.org/show_bug.cgi?id=722246